// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/SystemNotice > should match snapshot for admin, admin notice 1`] = `
<div>
  <div
    class="system-notice bg--white"
  >
    <div
      class="system-notice__logo"
    >
      <span>
        <svg
          aria-label="Mattermost Logo"
          enable-background="new 0 0 500 500"
          role="img"
          version="1.1"
          viewBox="0 0 500 500"
          x="0px"
          y="0px"
        >
          <g>
            <g>
              <path
                d="M396.9,47.7l2.6,53.1c43,47.5,60,114.8,38.6,178.1c-32,94.4-137.4,144.1-235.4,110.9 S51.1,253.1,83,158.7C104.5,95.2,159.2,52,222.5,40.5l34.2-40.4C150-2.8,49.3,63.4,13.3,169.9C-31,300.6,39.1,442.5,169.9,486.7 s272.6-25.8,316.9-156.6C522.7,223.9,483.1,110.3,396.9,47.7z"
                style="fill-rule: evenodd; clip-rule: evenodd;"
              />
            </g>
            <path
              d="M335.6,204.3l-1.8-74.2l-1.5-42.7l-1-37c0,0,0.2-17.8-0.4-22c-0.1-0.9-0.4-1.6-0.7-2.2 c0-0.1-0.1-0.2-0.1-0.3c0-0.1-0.1-0.2-0.1-0.2c-0.7-1.2-1.8-2.1-3.1-2.6c-1.4-0.5-2.9-0.4-4.2,0.2c0,0-0.1,0-0.1,0 c-0.2,0.1-0.3,0.1-0.4,0.2c-0.6,0.3-1.2,0.7-1.8,1.3c-3,3-13.7,17.2-13.7,17.2l-23.2,28.8l-27.1,33l-46.5,57.8 c0,0-21.3,26.6-16.6,59.4s29.1,48.7,48,55.1c18.9,6.4,48,8.5,71.6-14.7C336.4,238.4,335.6,204.3,335.6,204.3z"
              style="fill-rule: evenodd; clip-rule: evenodd;"
            />
          </g>
        </svg>
      </span>
    </div>
    <div
      class="system-notice__body"
    >
      <div
        class="system-notice__title"
      >
        some title
      </div>
      some body
      <div
        class="system-notice__info"
      >
        <i
          class="fa fa-eye"
          title="Only visible to System Admins Icon"
        />
        Only visible to System Admins
      </div>
      <div
        class="system-notice__footer"
      >
        <button
          class="btn btn-sm btn-primary"
          id="systemnotice_remindme"
        >
          Remind me Later
        </button>
        <button
          class="btn btn-sm btn-tertiary"
          id="systemnotice_dontshow"
        >
          Don't Show Again
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SystemNotice > should match snapshot for admin, regular notice 1`] = `
<div>
  <div
    class="system-notice bg--white"
  >
    <div
      class="system-notice__logo"
    >
      <span>
        <svg
          aria-label="Mattermost Logo"
          enable-background="new 0 0 500 500"
          role="img"
          version="1.1"
          viewBox="0 0 500 500"
          x="0px"
          y="0px"
        >
          <g>
            <g>
              <path
                d="M396.9,47.7l2.6,53.1c43,47.5,60,114.8,38.6,178.1c-32,94.4-137.4,144.1-235.4,110.9 S51.1,253.1,83,158.7C104.5,95.2,159.2,52,222.5,40.5l34.2-40.4C150-2.8,49.3,63.4,13.3,169.9C-31,300.6,39.1,442.5,169.9,486.7 s272.6-25.8,316.9-156.6C522.7,223.9,483.1,110.3,396.9,47.7z"
                style="fill-rule: evenodd; clip-rule: evenodd;"
              />
            </g>
            <path
              d="M335.6,204.3l-1.8-74.2l-1.5-42.7l-1-37c0,0,0.2-17.8-0.4-22c-0.1-0.9-0.4-1.6-0.7-2.2 c0-0.1-0.1-0.2-0.1-0.3c0-0.1-0.1-0.2-0.1-0.2c-0.7-1.2-1.8-2.1-3.1-2.6c-1.4-0.5-2.9-0.4-4.2,0.2c0,0-0.1,0-0.1,0 c-0.2,0.1-0.3,0.1-0.4,0.2c-0.6,0.3-1.2,0.7-1.8,1.3c-3,3-13.7,17.2-13.7,17.2l-23.2,28.8l-27.1,33l-46.5,57.8 c0,0-21.3,26.6-16.6,59.4s29.1,48.7,48,55.1c18.9,6.4,48,8.5,71.6-14.7C336.4,238.4,335.6,204.3,335.6,204.3z"
              style="fill-rule: evenodd; clip-rule: evenodd;"
            />
          </g>
        </svg>
      </span>
    </div>
    <div
      class="system-notice__body"
    >
      <div
        class="system-notice__title"
      >
        some title
      </div>
      some body
      <div
        class="system-notice__footer"
      >
        <button
          class="btn btn-sm btn-primary"
          id="systemnotice_remindme"
        >
          Remind me Later
        </button>
        <button
          class="btn btn-sm btn-tertiary"
          id="systemnotice_dontshow"
        >
          Don't Show Again
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SystemNotice > should match snapshot for regular user, admin and regular notice 1`] = `
<div>
  <div
    class="system-notice bg--white"
  >
    <div
      class="system-notice__logo"
    >
      <span>
        <svg
          aria-label="Mattermost Logo"
          enable-background="new 0 0 500 500"
          role="img"
          version="1.1"
          viewBox="0 0 500 500"
          x="0px"
          y="0px"
        >
          <g>
            <g>
              <path
                d="M396.9,47.7l2.6,53.1c43,47.5,60,114.8,38.6,178.1c-32,94.4-137.4,144.1-235.4,110.9 S51.1,253.1,83,158.7C104.5,95.2,159.2,52,222.5,40.5l34.2-40.4C150-2.8,49.3,63.4,13.3,169.9C-31,300.6,39.1,442.5,169.9,486.7 s272.6-25.8,316.9-156.6C522.7,223.9,483.1,110.3,396.9,47.7z"
                style="fill-rule: evenodd; clip-rule: evenodd;"
              />
            </g>
            <path
              d="M335.6,204.3l-1.8-74.2l-1.5-42.7l-1-37c0,0,0.2-17.8-0.4-22c-0.1-0.9-0.4-1.6-0.7-2.2 c0-0.1-0.1-0.2-0.1-0.3c0-0.1-0.1-0.2-0.1-0.2c-0.7-1.2-1.8-2.1-3.1-2.6c-1.4-0.5-2.9-0.4-4.2,0.2c0,0-0.1,0-0.1,0 c-0.2,0.1-0.3,0.1-0.4,0.2c-0.6,0.3-1.2,0.7-1.8,1.3c-3,3-13.7,17.2-13.7,17.2l-23.2,28.8l-27.1,33l-46.5,57.8 c0,0-21.3,26.6-16.6,59.4s29.1,48.7,48,55.1c18.9,6.4,48,8.5,71.6-14.7C336.4,238.4,335.6,204.3,335.6,204.3z"
              style="fill-rule: evenodd; clip-rule: evenodd;"
            />
          </g>
        </svg>
      </span>
    </div>
    <div
      class="system-notice__body"
    >
      <div
        class="system-notice__title"
      >
        some title2
      </div>
      some body2
      <div
        class="system-notice__footer"
      >
        <button
          class="btn btn-sm btn-primary"
          id="systemnotice_remindme"
        >
          Remind me Later
        </button>
        <button
          class="btn btn-sm btn-tertiary"
          id="systemnotice_dontshow"
        >
          Don't Show Again
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SystemNotice > should match snapshot for regular user, admin notice 1`] = `<div />`;

exports[`components/SystemNotice > should match snapshot for regular user, dismissed notice 1`] = `<div />`;

exports[`components/SystemNotice > should match snapshot for regular user, dont show again notice 1`] = `<div />`;

exports[`components/SystemNotice > should match snapshot for regular user, no notice 1`] = `<div />`;

exports[`components/SystemNotice > should match snapshot for regular user, regular notice 1`] = `
<div>
  <div
    class="system-notice bg--white"
  >
    <div
      class="system-notice__logo"
    >
      <span>
        <svg
          aria-label="Mattermost Logo"
          enable-background="new 0 0 500 500"
          role="img"
          version="1.1"
          viewBox="0 0 500 500"
          x="0px"
          y="0px"
        >
          <g>
            <g>
              <path
                d="M396.9,47.7l2.6,53.1c43,47.5,60,114.8,38.6,178.1c-32,94.4-137.4,144.1-235.4,110.9 S51.1,253.1,83,158.7C104.5,95.2,159.2,52,222.5,40.5l34.2-40.4C150-2.8,49.3,63.4,13.3,169.9C-31,300.6,39.1,442.5,169.9,486.7 s272.6-25.8,316.9-156.6C522.7,223.9,483.1,110.3,396.9,47.7z"
                style="fill-rule: evenodd; clip-rule: evenodd;"
              />
            </g>
            <path
              d="M335.6,204.3l-1.8-74.2l-1.5-42.7l-1-37c0,0,0.2-17.8-0.4-22c-0.1-0.9-0.4-1.6-0.7-2.2 c0-0.1-0.1-0.2-0.1-0.3c0-0.1-0.1-0.2-0.1-0.2c-0.7-1.2-1.8-2.1-3.1-2.6c-1.4-0.5-2.9-0.4-4.2,0.2c0,0-0.1,0-0.1,0 c-0.2,0.1-0.3,0.1-0.4,0.2c-0.6,0.3-1.2,0.7-1.8,1.3c-3,3-13.7,17.2-13.7,17.2l-23.2,28.8l-27.1,33l-46.5,57.8 c0,0-21.3,26.6-16.6,59.4s29.1,48.7,48,55.1c18.9,6.4,48,8.5,71.6-14.7C336.4,238.4,335.6,204.3,335.6,204.3z"
              style="fill-rule: evenodd; clip-rule: evenodd;"
            />
          </g>
        </svg>
      </span>
    </div>
    <div
      class="system-notice__body"
    >
      <div
        class="system-notice__title"
      >
        some title
      </div>
      some body
      <div
        class="system-notice__footer"
      >
        <button
          class="btn btn-sm btn-primary"
          id="systemnotice_remindme"
        >
          Remind me Later
        </button>
        <button
          class="btn btn-sm btn-tertiary"
          id="systemnotice_dontshow"
        >
          Don't Show Again
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SystemNotice > should match snapshot for show function returning false 1`] = `<div />`;

exports[`components/SystemNotice > should match snapshot for show function returning true 1`] = `
<div>
  <div
    class="system-notice bg--white"
  >
    <div
      class="system-notice__logo"
    >
      <span>
        <svg
          aria-label="Mattermost Logo"
          enable-background="new 0 0 500 500"
          role="img"
          version="1.1"
          viewBox="0 0 500 500"
          x="0px"
          y="0px"
        >
          <g>
            <g>
              <path
                d="M396.9,47.7l2.6,53.1c43,47.5,60,114.8,38.6,178.1c-32,94.4-137.4,144.1-235.4,110.9 S51.1,253.1,83,158.7C104.5,95.2,159.2,52,222.5,40.5l34.2-40.4C150-2.8,49.3,63.4,13.3,169.9C-31,300.6,39.1,442.5,169.9,486.7 s272.6-25.8,316.9-156.6C522.7,223.9,483.1,110.3,396.9,47.7z"
                style="fill-rule: evenodd; clip-rule: evenodd;"
              />
            </g>
            <path
              d="M335.6,204.3l-1.8-74.2l-1.5-42.7l-1-37c0,0,0.2-17.8-0.4-22c-0.1-0.9-0.4-1.6-0.7-2.2 c0-0.1-0.1-0.2-0.1-0.3c0-0.1-0.1-0.2-0.1-0.2c-0.7-1.2-1.8-2.1-3.1-2.6c-1.4-0.5-2.9-0.4-4.2,0.2c0,0-0.1,0-0.1,0 c-0.2,0.1-0.3,0.1-0.4,0.2c-0.6,0.3-1.2,0.7-1.8,1.3c-3,3-13.7,17.2-13.7,17.2l-23.2,28.8l-27.1,33l-46.5,57.8 c0,0-21.3,26.6-16.6,59.4s29.1,48.7,48,55.1c18.9,6.4,48,8.5,71.6-14.7C336.4,238.4,335.6,204.3,335.6,204.3z"
              style="fill-rule: evenodd; clip-rule: evenodd;"
            />
          </g>
        </svg>
      </span>
    </div>
    <div
      class="system-notice__body"
    >
      <div
        class="system-notice__title"
      >
        some title
      </div>
      some body
      <div
        class="system-notice__footer"
      >
        <button
          class="btn btn-sm btn-primary"
          id="systemnotice_remindme"
        >
          Remind me Later
        </button>
        <button
          class="btn btn-sm btn-tertiary"
          id="systemnotice_dontshow"
        >
          Don't Show Again
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SystemNotice > should match snapshot for with allowForget equal false 1`] = `
<div>
  <div
    class="system-notice bg--white"
  >
    <div
      class="system-notice__logo"
    >
      <span>
        <svg
          aria-label="Mattermost Logo"
          enable-background="new 0 0 500 500"
          role="img"
          version="1.1"
          viewBox="0 0 500 500"
          x="0px"
          y="0px"
        >
          <g>
            <g>
              <path
                d="M396.9,47.7l2.6,53.1c43,47.5,60,114.8,38.6,178.1c-32,94.4-137.4,144.1-235.4,110.9 S51.1,253.1,83,158.7C104.5,95.2,159.2,52,222.5,40.5l34.2-40.4C150-2.8,49.3,63.4,13.3,169.9C-31,300.6,39.1,442.5,169.9,486.7 s272.6-25.8,316.9-156.6C522.7,223.9,483.1,110.3,396.9,47.7z"
                style="fill-rule: evenodd; clip-rule: evenodd;"
              />
            </g>
            <path
              d="M335.6,204.3l-1.8-74.2l-1.5-42.7l-1-37c0,0,0.2-17.8-0.4-22c-0.1-0.9-0.4-1.6-0.7-2.2 c0-0.1-0.1-0.2-0.1-0.3c0-0.1-0.1-0.2-0.1-0.2c-0.7-1.2-1.8-2.1-3.1-2.6c-1.4-0.5-2.9-0.4-4.2,0.2c0,0-0.1,0-0.1,0 c-0.2,0.1-0.3,0.1-0.4,0.2c-0.6,0.3-1.2,0.7-1.8,1.3c-3,3-13.7,17.2-13.7,17.2l-23.2,28.8l-27.1,33l-46.5,57.8 c0,0-21.3,26.6-16.6,59.4s29.1,48.7,48,55.1c18.9,6.4,48,8.5,71.6-14.7C336.4,238.4,335.6,204.3,335.6,204.3z"
              style="fill-rule: evenodd; clip-rule: evenodd;"
            />
          </g>
        </svg>
      </span>
    </div>
    <div
      class="system-notice__body"
    >
      <div
        class="system-notice__title"
      >
        some title
      </div>
      some body
      <div
        class="system-notice__footer"
      >
        <button
          class="btn btn-sm btn-primary"
          id="systemnotice_remindme"
        >
          Remind me Later
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SystemNotice > should match snapshot when a custom icon is passed 1`] = `
<div>
  <div
    class="system-notice bg--white"
  >
    <div
      class="system-notice__logo"
    >
      <span>
        icon
      </span>
    </div>
    <div
      class="system-notice__body"
    >
      <div
        class="system-notice__title"
      >
        some title
      </div>
      some body
      <div
        class="system-notice__footer"
      >
        <button
          class="btn btn-sm btn-primary"
          id="systemnotice_remindme"
        >
          Remind me Later
        </button>
        <button
          class="btn btn-sm btn-tertiary"
          id="systemnotice_dontshow"
        >
          Don't Show Again
        </button>
      </div>
    </div>
  </div>
</div>
`;
